force-app/main/default/objects/AuditProduct__c/AuditProduct__c.object-meta.xml
<CustomObject>
    <label>Audit Product</label>
    <nameField>
        <label>Audit Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>