force-app/main/default/objects/AuditProduct__c/fields/ChangeDate__c.field-meta.xml
<CustomField>
    <fullName>ChangeDate__c</fullName>
    <label>ChangeDate</label>
    <type>Date</type>
</CustomField>