force-app/main/default/objects/AuditProduct__c/fields/ConcernedField__c.field-meta.xml
<CustomField>
    <fullName>ConcernedField__c</fullName>
    <label>ConcernedField</label>
    <length>50</length>
    <type>Text</type>
</CustomField>